--- a/setupy.yaml
+++ b/setupy.yaml
@@ -10,6 +10,7 @@ properties:
     extras_require:
         dev:
             - "\"pytest\""
+            - "\"pytest-cov\""
         neovim:
             - "\"neovim\""
 dependencies:
