--- a/setupy.yaml
+++ b/setupy.yaml
@@ -7,6 +7,7 @@ properties:
     install_requires:
         - "\"isort>=4.3\""
         - "\"pyyaml>=3.13\""
+        - "\"flask>=1.0.2\""
     extras_require:
         dev:
             - "\"pytest\""
